# telegram-bi-bot

./: README.md  handlers-old-copy.py  handlers.py  main-old.py  main.py  pyproject.toml  requirements.txt  test.py  test2.py
conf/: config.py
database/: db.py
keyboards/: crypto.py  economy.py  news.py  other.py  stock.py
services/: news_api.py  scrapper.py  test.py
