[tool.poetry]
name = "telegram-bot-bi"
version = "0.1.0"
description = ""
authors = ["Bohdan Boiprav <122865615+bohdanboiprav@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
sqlalchemy = "^2.0.27"
boto3 = "^1.34.50"
aiopg = "^1.4.0"
pydantic-settings = "^2.2.1"
requests = "^2.31.0"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
